--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "id": "5358211b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "text=\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e386b11c",
    "metadata": {},
    "outputs": [],
@@ -28,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "id": "4c075699",
    "metadata": {},
    "outputs": [],
    "source": [
     "def LSB_encode():\n",
-    "    img=cv2.imread('original.png')\n",
+    "    img=cv2.imread('pic/original.png')\n",
     "    text_binary=\"\"\n",
     "    text_binary_ptr=0\n",
     "    for i in text:\n",
@@ -60,27 +61,30 @@
     "    img=cv2.imread('LSB/LSB_encode.png')\n",
     "    text_binary=\"\"\n",
     "    text=\"\"\n",
+    "    flag=0\n",
     "    for i in range(len(img)):\n",
     "        for j in range(len(img[0])):\n",
     "            text_binary+=f'{img[i][j][2]:08b}'[1:][-1]\n",
-    "\n",
-    "    for i in range(0,len(text_binary),8):\n",
-    "        if(int(text_binary[i:i+8],2)!=0):\n",
-    "            text+=chr(int(text_binary[i:i+8],2))\n",
-    "        else:\n",
+    "            if(len(text_binary)%8==0):\n",
+    "                if(int(int(text_binary[-8:],2)==0)):\n",
+    "                    flag=1\n",
+    "                    break\n",
+    "                else:\n",
+    "                    text+=chr(int(text_binary[-8:],2))\n",
+    "        if(flag==1):\n",
     "            break\n",
     "    open('LSB/output.txt','w').write(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "id": "63dee7f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def LSB_RGB_encode():\n",
-    "    img=cv2.imread('original.png')\n",
+    "    img=cv2.imread('pic/original.png')\n",
     "    text_binary=\"\"\n",
     "    text_binary_ptr=0\n",
     "    for i in text:\n",
@@ -109,29 +113,34 @@
     "    img=cv2.imread('LSB/LSB_encode_RGB.png')\n",
     "    text_binary=\"\"\n",
     "    text=\"\"\n",
+    "    flag=0\n",
     "    for i in range(len(img)):\n",
     "        for j in range(len(img[0])):\n",
     "            for k in range(3):\n",
     "                text_binary+=f'{img[i][j][k]:08b}'[1:][-1]\n",
-    "\n",
-    "    for i in range(0,len(text_binary),8):\n",
-    "        if((int(text_binary[i:i+8],2)!=0)):\n",
-    "            text+=chr(int(text_binary[i:i+8],2))\n",
-    "        else:\n",
+    "                if(len(text_binary)%8==0):\n",
+    "                    if(int(int(text_binary[-8:],2)==0)):\n",
+    "                        flag=1\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        text+=chr(int(text_binary[-8:],2))\n",
+    "            if(flag==1):\n",
+    "                break\n",
+    "        if(flag==1):\n",
     "            break\n",
-    "\n",
+    "                \n",
     "    open('LSB/output_RGB.txt','w').write(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "id": "73c38cef",
    "metadata": {},
    "outputs": [],
    "source": [
     "def MSB_encode():\n",
-    "    img=cv2.imread('original.png')\n",
+    "    img=cv2.imread('pic/original.png')\n",
     "    text_binary=\"\"\n",
     "    text_binary_ptr=0\n",
     "    for i in text:\n",
@@ -157,14 +166,17 @@
     "    img=cv2.imread('MSB/MSB_encode.png')\n",
     "    text_binary=\"\"\n",
     "    text=\"\"\n",
+    "    flag=0\n",
     "    for i in range(len(img)):\n",
     "        for j in range(len(img[0])):\n",
     "            text_binary+=f'{img[i][j][0]:08b}'[0]\n",
-    "\n",
-    "    for i in range(0,len(text_binary),8):\n",
-    "        if(int(text_binary[i:i+8],2)!=0):\n",
-    "            text+=chr(int(text_binary[i:i+8],2))\n",
-    "        else:\n",
+    "            if(len(text_binary)%8==0):\n",
+    "                if(int(int(text_binary[-8:],2)==0)):\n",
+    "                    flag=1\n",
+    "                    break\n",
+    "                else:\n",
+    "                    text+=chr(int(text_binary[-8:],2))\n",
+    "        if(flag==1):\n",
     "            break\n",
     "\n",
     "    open('MSB/output.txt','w').write(text)"
@@ -172,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 17,
    "id": "f6e91f7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def MSB_RGB_encode():\n",
-    "    img=cv2.imread('original.png')\n",
+    "    img=cv2.imread('pic/original.png')\n",
     "    text_binary=\"\"\n",
     "    text_binary_ptr=0\n",
     "    for i in text:\n",
@@ -207,15 +219,20 @@
     "    img=cv2.imread('MSB/MSB_RGB_encode.png')\n",
     "    text_binary=\"\"\n",
     "    text=\"\"\n",
+    "    flag=0\n",
     "    for i in range(len(img)):\n",
     "        for j in range(len(img[0])):\n",
     "            for k in range(3):\n",
     "                text_binary+=f'{img[i][j][k]:08b}'[0]\n",
-    "\n",
-    "    for i in range(0,len(text_binary),8):\n",
-    "        if(int(text_binary[i:i+8],2)!=0):\n",
-    "            text+=chr(int(text_binary[i:i+8],2))\n",
-    "        else:\n",
+    "                if(len(text_binary)%8==0):\n",
+    "                    if(int(int(text_binary[-8:],2)==0)):\n",
+    "                        flag=1\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        text+=chr(int(text_binary[-8:],2))\n",
+    "            if(flag==1):\n",
+    "                break\n",
+    "        if(flag==1):\n",
     "            break\n",
     "\n",
     "    open('MSB/output_RGB.txt','w').write(text)"
@@ -223,12 +240,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 18,
+   "id": "745dcb00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Hybrid_encode():\n",
+    "    img=cv2.imread('pic/image1.jpg')\n",
+    "    img2=cv2.imread('pic/image2.jpg')\n",
+    "    img_final=img.copy()\n",
+    "    height,width,channels=img2.shape\n",
+    "    if img2.shape[0]>=img.shape[0] and img2.shape[1]>=img.shape[1]  :\n",
+    "        print('::: Pic 2 should be smaller')\n",
+    "    else:\n",
+    "        for i in range(len(img)):\n",
+    "            for j in range(0,len(img[0])-1):\n",
+    "                for k in range(3):\n",
+    "                    if(i<height and j<width):\n",
+    "                        img_final[i][j][k]=int(f'{img[i][j][k]:08b}'[:4]+f'{img2[i][j][k]:08b}'[:4],2)\n",
+    "                    else:\n",
+    "                        img_final[i][j][k]=int(f'{img[i][j][k]:08b}'[:4]+'0000',2)\n",
+    "        cv2.imwrite(\"Hybrid/Hybrid.png\",img_final,params=None)\n",
+    "\n",
+    "def Hybrid_decode():\n",
+    "    img=cv2.imread(\"Hybrid/Hybrid.png\")\n",
+    "    img_final=img.copy()\n",
+    "    for i in range(len(img)):\n",
+    "        for j in range(0,len(img[0])-1):\n",
+    "            for k in range(3):\n",
+    "                    img_final[i][j][k]=int(f'{img[i][j][k]:08b}'[4:]+'0000',2)\n",
+    "    cv2.imwrite(\"Hybrid/Hybrid_output.png\",img_final,params=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "ef69eede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def encode():\n",
     "    LSB_encode()\n",
     "    print('LSB_encode Done')\n",
@@ -253,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "id": "108ff2ae",
    "metadata": {},
    "outputs": [
@@ -274,9 +324,35 @@
     }
    ],
    "source": [
+    "# For text\n",
     "text=open('secret.txt','r').read()\n",
     "encode()\n",
     "decode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6608c1da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hybrid_encode Done\n",
+      "---------------------------\n",
+      "Hybrid_encode Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For Picture\n",
+    "Hybrid_encode()\n",
+    "print('Hybrid_encode Done')\n",
+    "print('---------------------------')\n",
+    "Hybrid_decode()\n",
+    "print('Hybrid_encode Done')\n"
    ]
   }
  ],
